Bug 363080 - scratchpad stops working when clicking right/middle mb while painting
Summary: scratchpad stops working when clicking right/middle mb while painting
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 3.0
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 363574 366241 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-14 19:17 UTC by helge
Modified: 2016-08-15 15:47 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description helge 2016-05-14 19:17:02 UTC
this happened with the last few beta builds. I open the brush editor, try the brush on the scratchpad and accidentally hit the right or middle mouse button, while I am painting. After that I cannot paint anymore and the last stroke cannot be deleted.

Reproducible: Always

Steps to Reproduce:
1.F5
2.paint on scratchpad
3.click r/m MB while LMB is pressed
Comment 1 helge 2016-05-14 19:19:06 UTC
i7 K875, GTX 560 Ti, 16 GB ram
Comment 2 helge 2016-05-14 19:19:39 UTC
i7 K875, GTX 560 Ti, 16 GB ram
Comment 3 Raghavendra kamath 2016-06-18 07:53:50 UTC
I can confirm this on arch linux
Comment 4 Halla Rempt 2016-06-18 08:19:21 UTC
I can make this happen, too.
Comment 5 aK 2016-06-24 04:56:10 UTC
Confirmed i can do the same , 64bit windows vista.
Comment 6 Halla Rempt 2016-06-24 11:51:37 UTC
*** Bug 363574 has been marked as a duplicate of this bug. ***
Comment 7 doctabasco 2016-06-28 06:43:08 UTC
confirmed, i7 6700K, GTX970, Windows 10 pro 64bit
Comment 8 wolthera 2016-08-08 17:53:52 UTC
*** Bug 366241 has been marked as a duplicate of this bug. ***
Comment 9 Halla Rempt 2016-08-15 12:34:08 UTC
I have also noticed that I can make only one stroke.
Comment 10 Dmitry Kazakov 2016-08-15 15:47:17 UTC
Git commit 596d09a948a3e8a105ee578cd20fc3dda3dcdf89 by Dmitry Kazakov.
Committed on 15/08/2016 at 15:46.
Pushed by dkazakov into branch 'master'.

Fix a hangup in ScratchPad when clicking too many mouse buttons at the same time

Fixes T3458

M  +18   -6    libs/ui/widgets/kis_scratch_pad.cpp
M  +4    -0    libs/ui/widgets/kis_scratch_pad.h

http://commits.kde.org/krita/596d09a948a3e8a105ee578cd20fc3dda3dcdf89