Fix a hangup in ScratchPad when clicking too many mouse buttons at the same time

Fixes T3458
BUG:363080